--- a/style.css
+++ b/style.css
@@ -1,7 +1,51 @@
+header{
+	background-color:green;
+	width:800px;
+	height:100px;
+	text-align: center;
+	padding-top: 10px;
+	text-shadow:5px 5px 5px white;
+}
 #menu
 {
 	position: fixed;
+	
 	width: 100%;
-	height: 35px;
-	background: white;
+
+	height: 53px;
+	
+	font-size: 120%;
+	
+	text-align: left;
+	
+	background-image: url('menuLogo.jpg');
+	
+	display: inline-block;
+	
+}
+nav{
+	background-color:red;
+	float: left;
+	width:150px;
+	height:500px;
+}
+section{
+	background-color:green;
+	float: left;
+	width:650px;
+	height:500px;
+}
+.info{
+	border-style: solid;
+	border-width: 1px;
+	border-color: white;
+	padding: 5px;
+	margin: 20px;
+	text-align: center;
+	background-color: orange;
+	-moz-border-radius: 35px;
+	border-radius: 35px;
+}
+.info:hover{
+	background-color: white;
 }
