--- a/try.css
+++ b/try.css
@@ -3,38 +3,39 @@ list-style-type: none;
 margin: 0;
 padding: 0;
 overflow: hidden;
-background-color: rgb(46, 46, 46);
+background-color: #2d545e;
 position: fixed;
 top: 0;
 width: 100%;
-border-left: 5px green solid;
+border-left: 5px #12343b;
 transition: border-width 0.4s;
 }
 
 li {
 float: left;
-border-right: 1px solid rgb(65, 42, 42);
-background-color: greenyellow;
+border-right: 1px solid #2d545e;
+background-color: #12343b;
 }
 
 li a {
 display: block;
-color: whitesmoke;
+color: #e1b382;
 text-align: center;
 padding: 14px 16px;
 text-decoration: none;
-background-color: rgb(46, 46, 46);
-border-right: 1px solid #bbb;
-font-size: 110%;
--webkit-text-stroke: 0.4px green;
+background-color: #2d545e;
+border-right: 1px solid #e1b382;
+font-size: 180%;
+-webkit-text-stroke: 0.4px #e1b382;
 }
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-background-color: rgb(70, 94, 34);
+background-color: #12343b;
+transform: scale(1.1);
 }
 .active {
-background-color: #04AA6D;
+background-color: #12343b;
 }
 
 
@@ -44,15 +45,16 @@ background-attachment: fixed;
 }
 h1 {
     width: 99%;
-    background-color: rgb(46, 46, 46);
-    color: green;
+    background-color: #2d545e;
+    color: #e1b382;
 	font-size: 250%;
 	text-align: center;
-	border: grey;
+	border: #e1b382;
 	border-width: 10px;
-    -webkit-text-stroke: 0.8px white;
-    border-left: 5px green solid;
+    -webkit-text-stroke: 0.8px #c89666;
+    border-left: 5px #c89666 solid;
     transition: border-width 0.4s;
+    
 }
 h1:hover {
     border-width: 15px;
@@ -61,29 +63,33 @@ h1:hover {
 
 h2 {
     width: 99%;
-    background-color: rgb(46, 46, 46);
-    color: whitesmoke;
+    /* background-color: #e1b382; */
+    color: #2d545e;
 	font-size: 100%;
 	text-align: center;
-	border: grey;
+	border: #e1b382;
 	border-width: 10px;
 }
 
 h3 {
     width: 100%;
-    background-color: gray;
-    color: whitesmoke;
+    /* background-color: #c89666; */
+    color: #2d545e;
 	font-size: 100%;
 	text-align: center;
-	border: grey;
+	border: #e1b382;
 	border-width: 10px;
 }
 
 section{
-	background-color:grey;
+    /* background-color:#e1b382; */
 	float: left;
 	width:100%;
 	height:100%;
+    /* background-image: url("img7.jpg");
+    background-repeat: no-repeat; Do not repeat the image
+    background-size: cover;  */
+
 }
 
 .center {
@@ -94,15 +100,34 @@ section{
   }
 
 .responsive {
-    width: 100%;
+    width: auto;
     margin-left: auto;
     margin-right: auto;
-    max-width: 415px;
+    max-width: 32.5vw;
     height: auto;
+    transition: transform .4s;
+}
+.responsive:hover{
+    transform: scale(1.5);
 }
 .avatar {
     vertical-align: middle;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    transition: transform .2s;
   }
+.avatar:hover{
+    transform: scale(1.3);
+}
+body {
+    background-image: url("wallpaper.jpg");
+    background-color: #cccccc;
+  }
+  /* Sand Tan: #e1b382
+
+Sand Tan Shadow: #c89666
+
+Night Blue: #2d545e
+
+Night Blue Shadow: #12343b */
