--- a/try.css
+++ b/try.css
@@ -80,7 +80,6 @@ h3 {
 	border: #e1b382;
 	border-width: 10px;
 }
-
 section{
     /* background-color:#e1b382; */
 	float: left;
@@ -105,7 +104,7 @@ section{
     margin-right: auto;
     max-width: 32.5vw;
     height: auto;
-    transition: transform .4s;
+    transition: transform .2s;
 }
 .responsive:hover{
     transform: scale(1.5);
@@ -116,13 +115,38 @@ section{
     height: 50px;
     border-radius: 50%;
     transition: transform .2s;
-  }
+}
 .avatar:hover{
     transform: scale(1.3);
     /* HOW TO ZOON ON HOVER
     https://www.w3schools.com/howto/howto_css_zoom_hover.asp
     */
 }
+.QR {
+    width: 15vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-top: 2vh;
+    max-width: auto;
+    height: 15vh;
+    transition: transform .2s;
+}
+.QR:hover{
+    transform: scale(1.5);
+}
+h4 {
+    display: block;
+    width: auto;
+    background-color: #2d545e;
+    color: #e1b382;
+    font-size: 250%;
+    text-align: center;
+    text-decoration: solid;
+    -webkit-text-stroke: 0.8px #c89666;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
 body {
     background-image: url("wallpaper.jpg");
     background-color: #cccccc;
