--- a/try.css
+++ b/try.css
@@ -117,7 +117,7 @@ section{
     transition: transform .2s;
 }
 .avatar:hover{
-    transform: scale(1.3);
+    transform: scale(1.8);
     /* HOW TO ZOON ON HOVER
     https://www.w3schools.com/howto/howto_css_zoom_hover.asp
     */
@@ -162,3 +162,43 @@ Night Blue Shadow: #12343b
 
 https://hookagency.com/blog/website-color-schemes-2020/
 */
+
+/* https://www.w3schools.com/howto/howto_css_image_grid_responsive.asp */
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 24%;
+    max-width: 24%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+    transition: transform .2s;
+  }
+  .column img:hover{
+    transform: scale(1.2);
+}
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
