--- a/try.css
+++ b/try.css
@@ -65,10 +65,15 @@ h2 {
     width: 99%;
     /* background-color: #e1b382; */
     color: #2d545e;
-	font-size: 100%;
+	font-size: 300%;
+    font-display: swap;
 	text-align: center;
-	border: #e1b382;
+	border: #ffffff;
 	border-width: 10px;
+    font-weight: bold;
+    font-style: italic;
+    overflow: hidden;
+
 }
 
 h3 {
@@ -111,13 +116,58 @@ section{
 }
 .avatar {
     vertical-align: middle;
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
     transition: transform .2s;
+    overflow: visible;
 }
 .avatar:hover{
     transform: scale(1.8);
+    /* HOW TO ZOON ON HOVER
+    https://www.w3schools.com/howto/howto_css_zoom_hover.asp
+    */
+}
+.avatar_text {
+    vertical-align: middle;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    transition: transform .2s;
+    overflow: hidden;
+}
+.avatar_text:hover{
+    transform: scale(2.5);
+    border-radius: 5%
+    /* HOW TO ZOON ON HOVER
+    https://www.w3schools.com/howto/howto_css_zoom_hover.asp
+    */
+}
+.avatar_hobby {
+    vertical-align: middle;
+    width: 150px;
+    height: 150px;
+    border-radius: 25%;
+    transition: transform .2s;
+    overflow: hidden;
+}
+.avatar_hobby:hover{
+    transform: scale(2.5);
+    border-radius: 5%
+    /* HOW TO ZOON ON HOVER
+    https://www.w3schools.com/howto/howto_css_zoom_hover.asp
+    */
+}
+.avatar_header {
+    vertical-align: middle;
+    width: 150px;
+    height: 150px;
+    border-radius: 15%;
+    transition: transform .2s;
+}
+.avatar_header:hover{
+    transform: scale(2.0);
+    border-radius: 50%
     /* HOW TO ZOON ON HOVER
     https://www.w3schools.com/howto/howto_css_zoom_hover.asp
     */
@@ -175,6 +225,7 @@ https://hookagency.com/blog/website-color-schemes-2020/
     flex: 24%;
     max-width: 24%;
     padding: 0 4px;
+    
   }
   
   .column img {
@@ -182,9 +233,11 @@ https://hookagency.com/blog/website-color-schemes-2020/
     vertical-align: middle;
     width: 100%;
     transition: transform .2s;
+    overflow: hidden;
   }
   .column img:hover{
-    transform: scale(1.2);
+    transform: scale(1.5);
+    overflow: hidden;
 }
   
   /* Responsive layout - makes a two column-layout instead of four columns */
