--- a/try.css
+++ b/try.css
@@ -6,9 +6,13 @@ overflow: visible;
 background-color: #2d545e;
 position: fixed;
 top: 0;
+left: 0;
+right: 0;
 width: 100%;
 border-left: 5px #12343b;
 transition: border-width 0.4s;
+opacity: 1;
+z-index: 999;
 }
 
 li {
@@ -233,11 +237,10 @@ https://hookagency.com/blog/website-color-schemes-2020/
     vertical-align: middle;
     width: 100%;
     transition: transform .2s;
-    overflow: hidden;
   }
   .column img:hover{
     transform: scale(1.5);
-    overflow: hidden;
+
 }
   
   /* Responsive layout - makes a two column-layout instead of four columns */
@@ -270,7 +273,7 @@ https://hookagency.com/blog/website-color-schemes-2020/
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     overflow: hidden;
-    opacity: 0.4;
+    opacity: 0.8;
   }
   .vertical-center:hover {
     opacity: 1;
