--- a/try.css
+++ b/try.css
@@ -288,3 +288,41 @@ https://hookagency.com/blog/website-color-schemes-2020/
   th, td {
     padding: 15px;
   }
+  
+
+  /* input type text */
+  input[type=text], select {
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    color: #2d545e;
+    font-size: 25%;
+  }
+
+  /* input type submit and reset */
+  input[type=submit],input[type=reset] {
+  width: 75%;
+  background-color: #2d545e;
+  color: #e1b382;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 50%;
+}
+
+input[type=submit]:hover ,input[type=reset]:hover {
+  background-color: #12343b;
+  font-size: 55%;
+}
+
+/* emoji picker -   */
+
+
+
