--- a/try.css
+++ b/try.css
@@ -317,12 +317,23 @@ https://hookagency.com/blog/website-color-schemes-2020/
   font-size: 50%;
 }
 
-input[type=submit]:hover ,input[type=reset]:hover {
+input[type=submit]:hover ,input[type=reset]:hover , .button:hover{
   background-color: #12343b;
   font-size: 55%;
 }
 
-/* emoji picker -   */
-
+.button {
+    width: 75%;
+    background-color: #2d545e;
+    border: none;
+    color: #e1b382;
+    padding: 14px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 50%;
+    margin: 8px 0;
+    cursor: pointer;
+  }
 
 
