--- a/try.css
+++ b/try.css
@@ -337,3 +337,207 @@ input[type=submit]:hover ,input[type=reset]:hover , .button:hover{
   }
 
 
+    /* cubes */
+
+
+.cube-container {
+	width: 100px;
+	height: 100px;
+	perspective: 800px;
+	margin: auto;
+    display: inline-block;
+}
+.cube-container:hover {
+    transform: scale(1.5);
+}
+.cube {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    -webkit-animation: 15s linear rotate infinite;
+    -moz-animation: 15s linear rotate infinite;
+    transform: translateZ(-100px);
+    display: inline-block;
+    
+
+}
+
+.cube__face {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    border-radius: 5%;
+}
+
+
+.front  { background-image: url("photos\\s1.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.back  { background-image: url("photos\\s2.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.left  { background-image: url("photos\\s3.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.right  { background-image: url("photos\\s4.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.top  { background-image: url("photos\\s5.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.bottom  { background-image: url("photos\\s6.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.front  { transform: rotateY(  0deg) translateZ(50px); }
+.back   { transform: rotateY(180deg) translateZ(50px); }
+.left   { transform: rotateY(-90deg) translateZ(50px); }
+.right  { transform: rotateY( 90deg) translateZ(50px); }
+.top    { transform: rotateX( 90deg) translateZ(50px); }
+.bottom { transform: rotateX(-90deg) translateZ(50px); }
+.cube { transform: translateZ(-100px); }
+/* 1 */
+.front1  { background-image: url("photos\\s2.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.back1  { background-image: url("photos\\s3.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.left1  { background-image: url("photos\\s4.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.right1  { background-image: url("photos\\s5.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.top1  { background-image: url("photos\\s6.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.bottom1  { background-image: url("photos\\s7.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.front1  { transform: rotateY(  0deg) translateZ(50px); }
+.back1   { transform: rotateY(180deg) translateZ(50px); }
+.left1   { transform: rotateY(-90deg) translateZ(50px); }
+.right1  { transform: rotateY( 90deg) translateZ(50px); }
+.top1    { transform: rotateX( 90deg) translateZ(50px); }
+.bottom1 { transform: rotateX(-90deg) translateZ(50px); }
+
+/* 2 */
+.front2  { background-image: url("photos\\s3.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.back2  { background-image: url("photos\\s4.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.left2  { background-image: url("photos\\s5.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.right2  { background-image: url("photos\\s6.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.top2  { background-image: url("photos\\s7.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.bottom2  { background-image: url("photos\\s1.jpeg");
+    background-position: center;
+    background-size: cover; }
+
+.front2  { transform: rotateY(  0deg) translateZ(50px); }
+.back2   { transform: rotateY(180deg) translateZ(50px); }
+.left2   { transform: rotateY(-90deg) translateZ(50px); }
+.right2  { transform: rotateY( 90deg) translateZ(50px); }
+.top2    { transform: rotateX( 90deg) translateZ(50px); }
+.bottom2 { transform: rotateX(-90deg) translateZ(50px); }
+
+@-webkit-keyframes rotate {
+    0%,
+    5% {
+        -webkit-transform: translateZ(-150px) rotateY(   0deg);
+        transform: translateZ(-150px) rotateY(   0deg);
+    }
+    10%,
+    20% {
+        -webkit-transform: translateZ(-150px) rotateY( 180deg);
+        transform: translateZ(-150px) rotateY( 180deg);
+    }
+    25%,
+    35% {
+        -webkit-transform: translateZ(-150px) rotateY(270deg);
+        transform: translateZ(-150px) rotateY(270deg);
+    }
+    40%,
+    50% {
+        -webkit-transform: translateZ(-150px) rotateY(  90deg);
+        transform: translateZ(-150px) rotateY(  90deg);
+    }
+    55%,
+    65% {
+        -webkit-transform: translateZ(-150px) rotateX( -90deg);
+        transform: translateZ(-150px) rotateX( -90deg);
+    }
+    70%,
+    80% {
+        -webkit-transform: translateZ(-150px) rotateX(  90deg);
+        transform: translateZ(-150px) rotateX(  90deg);
+    }
+    95%,
+    100% {
+        -webkit-transform: translateZ(-150px) rotateY(   0deg);
+        transform: translateZ(-150px) rotateY(   0deg);
+    }
+}
+
+@keyframes rotate {
+    0%,
+    5% {
+        -webkit-transform: translateZ(-150px) rotateY(   0deg);
+        transform: translateZ(-150px) rotateY(   0deg);
+    }
+    10%,
+    20% {
+        -webkit-transform: translateZ(-150px) rotateY( 180deg);
+        transform: translateZ(-150px) rotateY( 180deg);
+    }
+    25%,
+    35% {
+        -webkit-transform: translateZ(-150px) rotateY(270deg);
+        transform: translateZ(-150px) rotateY(270deg);
+    }
+    40%,
+    50% {
+        -webkit-transform: translateZ(-150px) rotateY(  90deg);
+        transform: translateZ(-150px) rotateY(  90deg);
+    }
+    55%,
+    65% {
+        -webkit-transform: translateZ(-150px) rotateX( -90deg);
+        transform: translateZ(-150px) rotateX( -90deg);
+    }
+    70%,
+    80% {
+        -webkit-transform: translateZ(-150px) rotateX(  90deg);
+        transform: translateZ(-150px) rotateX(  90deg);
+    }
+    95%,
+    100% {
+        -webkit-transform: translateZ(-150px) rotateY(   0deg);
+        transform: translateZ(-150px) rotateY(   0deg);
+    }
+}
