--- a/try.css
+++ b/try.css
@@ -22,7 +22,7 @@ ul_down_right {
     position: fixed;
     bottom: 0;
     right: 0;
-    left: 95%;
+    left: 95vw;
     width: 100%;
     transition: border-width 0.4s;
     opacity: 1;
